<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context=".fragments.DataReceivingFragment">


    <TextView
        android:id="@+id/nameDataTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_will_be_here"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/genderDataTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/genderDataTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_will_be_here"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/ageDataTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameDataTxt" />

    <TextView
        android:id="@+id/ageDataTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_data_will_be_here"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderDataTxt" />


</androidx.constraintlayout.widget.ConstraintLayout>