<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".fragments.DataSendingFragment">

    <EditText
        android:id="@+id/nameET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/genderET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/genderET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_gender"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/ageET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <EditText
        android:id="@+id/ageET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_age"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/sendDataBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderET" />

    <Button
        android:id="@+id/sendDataBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="send data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageET" />

</androidx.constraintlayout.widget.ConstraintLayout>